<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/enrollment_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:text="@string/enrollment_label" />

                <CheckBox
                    android:id="@+id/checkbox_small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/college_small" />

                <CheckBox
                    android:id="@+id/checkbox_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/college_medium" />

                <CheckBox
                    android:id="@+id/checkbox_large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/college_large" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/location_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:text="@string/location_label" />

                <CheckBox
                    android:id="@+id/checkbox_city"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/city" />

                <CheckBox
                    android:id="@+id/checkbox_suburb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/suburb" />

                <CheckBox
                    android:id="@+id/checkbox_town"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/town" />

                <CheckBox
                    android:id="@+id/checkbox_rural"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/rural" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/type_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:text="@string/type_label" />

                <CheckBox
                    android:id="@+id/checkbox_public"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/public_i" />

                <CheckBox
                    android:id="@+id/checkbox_private_fp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/private_fp" />

                <CheckBox
                    android:id="@+id/checkbox_private_nfp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/private_nfp" />

                <CheckBox
                    android:id="@+id/checkbox_private_rel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/private_rel" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/sat_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:text="@string/sat_label" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/sat_ver_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:text="@string/sat_ver_label" />

            <EditText
                android:id="@+id/sat_ver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="3"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLength="3" />

            <TextView
                android:id="@+id/sat_mat_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:text="@string/sat_mat_label" />

            <EditText
                android:id="@+id/sat_mat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="3"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLength="3" />

            <TextView
                android:id="@+id/sat_wri_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:text="@string/sat_wri_label" />

            <EditText
                android:id="@+id/sat_wri"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="3"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLength="3" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/act_input_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:text="@string/act_input_label" />

            <EditText
                android:id="@+id/act_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="2"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLength="2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            android:weightSum="1" >

            <Spinner
                android:id="@+id/statesSpinner2"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:entries="@array/states"
                android:prompt="@string/sort_prompt" />

            <Spinner
                android:id="@+id/majorSpinner"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:entries="@array/majorsList"
                android:prompt="@string/major_prompt" />
        </LinearLayout>

        <Spinner
            android:id="@+id/sortSpinner2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:entries="@array/sortList"
            android:prompt="@string/sort_prompt" />

        <Button
            android:id="@+id/button_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_send" />
    </LinearLayout>

</ScrollView>